crates/toml/tests/snapshots/invalid/string/bad-escape-01.stderr
TOML parse error at line 1, column 42
  |
1 | invalid-escape = "This string has a bad \a escape character."
  |                                          ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
